--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "vuepress": "^1.4.1"
+    "vuepress": "^1.4.1",
+    "vue-router": "3.4.5"
   },
   "devDependencies": {
     "@vuepress/theme-blog": "^2.2.0"
